--- a/universities.html
+++ b/universities.html
@@ -103,9 +103,9 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Bachelor in International Business</li>
+                        <li>Undergraduate Summer School</li>
+                        <li>Undergraduate Certificate - CIB or CBS</li>
                     </ul>
                 </div>
 
@@ -120,9 +120,12 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>MBA</li>
+                        <li>MSc Management in International Business (MIB)</li>
+                        <li>Masters in Management (Grande Ecole Program)</li>
+                        <li>Advanced Master in Biotechnology & Pharmaceutical Management</li>
+                        <li>Advanced Master in Digital Strategy Management</li>
+                        <li>Advanced Master in Energy Marketing and Management</li>
                     </ul>
                 </div>
 
@@ -137,9 +140,8 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Doctorate of Business Administration (DBA)</li>
+                        <li>PhD in Business Administration</li>
                     </ul>
                 </div>
 
@@ -154,9 +156,15 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>MSc Business Development</li>
+                        <li>MSc Entrepreneurship & Global Marketing</li>
+                        <li>MSc Fashion, Design and Luxury Management</li>
+                        <li>MSc Finance</li>
+                        <li>MSc Humanitarian Program Management</li>
+                        <li>MSc Innovation, Strategy and Entrepreneurship</li>
+                        <li>MSc International Human Resource Management in the Digital Age</li>
+                        <li>MSc Marketing Management</li>
+
                     </ul>
                 </div>
 
@@ -252,9 +260,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Bachelor in International Management</li>
                     </ul>
                 </div>
 
@@ -269,9 +275,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <p>No Postgraduate Program is available at this University</p>
                     </ul>
                 </div>
 
@@ -286,9 +290,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>MIB / DBA: Doctorate of Business Administration</li>
                     </ul>
                 </div>
 
@@ -303,9 +305,19 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>MSc: Business Intelligence & Analytics</li>
+                        <li>MSc: Coporate Finance & Fintech</li>
+                        <li>MSc: International Commerce & Digital Marketing</li>
+                        <li>MSc: Project Management</li>
+                        <li>MSc: Purchasing & Supply Chain Management</li>
+                        <li>MSc: Transforming Mobility - Business Models & Vehicles for the Future</li>
+                        <li>MSc: Strategy & Design for the Anthropocene</li>
+                        <li>MIB / DBA: Master in International Business - Business Management</li>
+                        <li>MIB / DBA: Master in International Business - Doing Business in Asia / Double-diplôme ISMAC</li>
+                        <li>MIB / DBA: Master in International Business - International Affairs</li>
+                        <li>MIB / DBA: Master in International Business - Management of Health Care Insitutions</li>
+                        <li>MIB / DBA: Master in International Business - Marketing Digital</li>
+                        <li>MIB / DBA: Master in International Business - Project Management</li>
                     </ul>
                 </div>
 
@@ -401,15 +413,13 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Bachelor of International Business Administration</li>
                     </ul>
                 </div>
 
             </div>
 
-            <div class="postgrad">
+            <div class="postgrad" id="empty">
 
                 <button class="panelbutton">
                     <h3>Postgraduate Programs</h3>
@@ -418,9 +428,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Programme Grande Ecole</li>
                     </ul>
                 </div>
 
@@ -435,9 +443,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <p>No Doctoral Program is available at this University</p>
                     </ul>
                 </div>
 
@@ -452,9 +458,8 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Masters of Science</li>
+                        <li>Executive MBA</li>
                     </ul>
                 </div>
 
@@ -550,9 +555,8 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Fashion Design & Haute Couture</li>
+                        <li>Interior Design</li>
                     </ul>
                 </div>
 
@@ -567,9 +571,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <p>No Postgraduate Program is available at this University</p>
                     </ul>
                 </div>
 
@@ -584,9 +586,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <p>No Doctoral Program is available at this University</p>
                     </ul>
                 </div>
 
@@ -601,9 +601,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <p>No MSc Program is available at this University</p>
                     </ul>
                 </div>
 
@@ -699,9 +697,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>Bachelor of Business Administration</li>
                     </ul>
                 </div>
 
@@ -716,9 +712,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>MBA</li>
                     </ul>
                 </div>
 
@@ -733,9 +727,7 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>DBA</li>
                     </ul>
                 </div>
 
@@ -750,9 +742,13 @@
 
                 <div class="panel">
                     <ul>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
-                        <li>Lorem ipsum</li>
+                        <li>MSc in Arts & Cultural Management</li>
+                        <li>MSc in Hospitality & Tourism Management</li>
+                        <li>MSc in International Finance</li>
+                        <li>MSc in International Management</li>
+                        <li>MSc in Luxury & Fashion Management</li>
+                        <li>MSc Marketing Strategy et Data Analytics</li>
+                        <li>MSc in Purchasing & Supply Chain Management</li>
                     </ul>
                 </div>
 
