--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <button onclick="showAns1()" class="faq_button1"><img src="assets/images/landing/+.png"></button>
       <p>What is included in the Price ?</p>
       <div id="answer1">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"There are 3 packages to choose from. You can see them above."</p>
       </div>
 
     </div>
@@ -243,7 +243,15 @@
       <button onclick="showAns2()" class="faq_button2"><img src="assets/images/landing/+.png"></button>
       <p>How will the process go ? </p>
       <div id="answer2">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"Step 1 - Contact us
+          Step 2 - Have the first meeting
+          Step 3 - Personal Traits Test 
+          Step 4 - Selection of majors and universities
+          Step 5 - Application Process
+          Step 6 - Acquiring via
+          Step 7 - Search for the accommodation 
+          Step 8 - Leave abroad 
+          "</p>
       </div>
 
     </div>
@@ -252,7 +260,7 @@
       <button onclick="showAns3()" class="faq_button3"><img src="assets/images/landing/+.png"></button>
       <p>What happens after I get accepted into the university ?</p>
       <div id="answer3">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"Visa Process, search for accommodation and departure abroad."</p>
       </div>
 
     </div>
@@ -261,7 +269,7 @@
       <button onclick="showAns4()" class="faq_button4"><img src="assets/images/landing/+.png"></button>
       <p>How do I get my visa ?</p>
       <div id="answer4">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"There is a whole Application Process that we are very willing to help you with."</p>
       </div>
 
     </div>
@@ -270,7 +278,7 @@
       <button onclick="showAns5()" class="faq_button5"><img src="assets/images/landing/+.png"></button>
       <p> How can I start?</p>
       <div id="answer5">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"Contact us and we’ll start the process together."</p>
       </div>
 
     </div>
@@ -279,7 +287,7 @@
       <button onclick="showAns6()" class="faq_button6"><img src="assets/images/landing/+.png"></button>
       <p>Can I get a scholarship?</p>
       <div id="answer6">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"Maybe"</p>
       </div>
 
     </div>
@@ -287,7 +295,7 @@
       <button onclick="showAns7()" class="faq_button7"><img src="assets/images/landing/+.png"></button>
       <p>Are European Diplomas Globally recognized?</p>
       <div id="answer7">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"Good question... Idk"</p>
       </div>
 
     </div>
@@ -295,7 +303,7 @@
       <button onclick="showAns8()" class="faq_button8"><img src="assets/images/landing/+.png"></button>
       <p>Will I be allowed to work there?</p>
       <div id="answer8">
-        <p>"You already scrolled through that section you heedless piece of human ****."</p>
+        <p>"Yes. Every student can work there."</p>
       </div>
     </div>
 
