--- a/contact-submit.html
+++ b/contact-submit.html
@@ -22,9 +22,9 @@
         <div class="grid-submit-intro">
 
             <section class="submit-intro">
-                <h3>Successfully submitted!!</h3>
+                <h3>Successfully submitted!</h3>
                 <p>Your submission was sent.
-                    <br> we will contact you soon!</p>
+                    <br> We will contact you soon!</p>
                 
                <button class="buttonStyle1" onClick="location.href='contact-us.html'"> Go Back </button>
                
