information about the team added

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -105,33 +105,34 @@
             <div class="side-team">
 
                 <div class="team">
-                    <h3>Our Team</h3>
+                    <h3> European Study Solution team</h3>
                 </div>
 
                 <div class="cards">
                     <div class="card">
 
-                        <img src="assets/images/person-1.png" alt=contact-picture>
+                        <img src="assets/images/daria (2).jpg" width="200px" alt=contact-picture>
 
                         <article class="card-text">
-                            <h4> Sumana Karki </h4>
-                            <p> “FROM Canada: I found ESS agency more experience,
-                                professional & dedicated. Their expertise are useful
-                                for me not only for granting visa but also for choosing
-                                right institution based on my previous qualifications. ” </p>
+                            <h4> Dasha Malevka </h4>
+                            <p> Dasha is the owner of ESS Agency and has been a part of the team since founding the
+                                agency
+                                in 2019. “The reason why I decided to establish ESS is that, I love to help students to
+                                pursue their goals towards high-education. I would love to help you with an
+                                applications!”</p>
                         </article>
 
                     </div>
 
                     <div class="card">
-                        <img src="assets/images/person-1.png" alt=contact-picture>
+                        <img src="assets/images/portrait2.jpg" width="200px" alt=contact-picture>
 
                         <article class="card-text">
-                            <h4> Sumana Karki </h4>
-                            <p> “FROM Canada: I found ESS agency more experience,
-                                professional & dedicated. Their expertise are useful
-                                for me not only for granting visa but also for choosing
-                                right institution based on my previous qualifications. ” </p>
+                            <h4> Martin James </h4>
+                            <p> Martin is a main agency group member responsible for communication with universities.
+                                “I´m native American, who decided to study abroad, so I do really know what problems
+                                with applications you might face. Thats why I decided to join Dasha, and establish this
+                                great opportunity! ” </p>
                         </article>
 
                     </div>
