--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
       <div id="answer2">
         <p>"Step 1 - Contact us
           Step 2 - Have the first meeting
-          Step 3 - Personal Traits Test 
+          Step 3 - Personal Traits Test
           Step 4 - Selection of majors and universities
           Step 5 - Application Process
           Step 6 - Acquiring via
-          Step 7 - Search for the accommodation 
-          Step 8 - Leave abroad 
+          Step 7 - Search for the accommodation
+          Step 8 - Leave abroad
           "</p>
       </div>
 
@@ -287,7 +287,8 @@
       <button onclick="showAns6()" class="faq_button6"><img src="assets/images/landing/+.png"></button>
       <p>Can I get a scholarship?</p>
       <div id="answer6">
-        <p>"Maybe"</p>
+        <p>"French public institutes and the Erasmus+ programme offer a large number of scholarships for foreign
+          students to help them finance their studies in France and Europe."</p>
       </div>
 
     </div>
@@ -295,7 +296,7 @@
       <button onclick="showAns7()" class="faq_button7"><img src="assets/images/landing/+.png"></button>
       <p>Are European Diplomas Globally recognized?</p>
       <div id="answer7">
-        <p>"Good question... Idk"</p>
+        <p>"Yes, it is Globally recognizable"</p>
       </div>
 
     </div>
