contact-us-changes

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -29,7 +29,7 @@
                 <li> <a href="universities.html">Universities</a></li>
                 <li> <a href="service.html">Our Services</a></li>
                 <li><a href="Contact-us.html">
-                        <div class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</div>
+                        <div class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</div>
                     </a></li>
 
             </ul>
@@ -111,13 +111,13 @@
                 <div class="cards">
                     <div class="card">
 
-                        <img src="assets/images/daria (2).jpg" width="200px" alt=contact-picture>
+                        <img src="assets/images/daria (2).jpg" width="170px" alt=contact-picture>
 
                         <article class="card-text">
                             <h4> Dasha Malevka </h4>
                             <p> Dasha is the owner of ESS Agency and has been a part of the team since founding the
                                 agency
-                                in 2019. “The reason why I decided to establish ESS is that, I love to help students to
+                                in 2019.<br> “The reason why I decided to establish ESS is that, I love to help students to
                                 pursue their goals towards high-education. I would love to help you with an
                                 applications!”</p>
                         </article>
@@ -125,12 +125,12 @@
                     </div>
 
                     <div class="card">
-                        <img src="assets/images/portrait2.jpg" width="200px" alt=contact-picture>
+                        <img src="assets/images/portrait2.jpg" width="170px" alt=contact-picture>
 
                         <article class="card-text">
                             <h4> Martin James </h4>
                             <p> Martin is a main agency group member responsible for communication with universities.
-                                “I´m native American, who decided to study abroad, so I do really know what problems
+                                <br>“I´m native American, who decided to study abroad, so I do really know what problems
                                 with applications you might face. Thats why I decided to join Dasha, and establish this
                                 great opportunity! ” </p>
                         </article>
