Images Fixed + Linked

--- a/universities.html
+++ b/universities.html
@@ -217,27 +217,27 @@
             </div>
 
             <div class="image1">
-                <img src="assets/images/studentlife/image1.png">
+                <img src="assets/images/studentlife/GEM/GEM1.jpeg">
             </div>
 
             <div class="image2">
-                <img src="assets/images/studentlife/image2.png">
+                <img src="assets/images/studentlife/GEM/GEM2.jpeg">
             </div>
 
             <div class="image3">
-                <img src="assets/images/studentlife/image3.png">
+                <img src="assets/images/studentlife/GEM/GEM3.jpeg">
             </div>
 
             <div class="image4">
-                <img src="assets/images/studentlife/image4.png">
+                <img src="assets/images/studentlife/GEM/GEM4.jpeg">
             </div>
 
             <div class="image5">
-                <img src="assets/images/studentlife/image5.png">
+                <img src="assets/images/studentlife/GEM/GEM5.jpeg">
             </div>
 
             <div class="image6">
-                <img src="assets/images/studentlife/image6.png">
+                <img src="assets/images/studentlife/GEM/GEM6.jpeg">
             </div>
 
         </div>
@@ -369,27 +369,27 @@
             </div>
 
             <div class="image1">
-                <img src="assets/images/studentlife/image1.png">
+                <img src="assets/images/studentlife/ESC/ESC1.jpg">
             </div>
 
             <div class="image2">
-                <img src="assets/images/studentlife/image2.png">
+                <img src="assets/images/studentlife/ESC/ESC2.jpg">
             </div>
 
             <div class="image3">
-                <img src="assets/images/studentlife/image3.png">
+                <img src="assets/images/studentlife/ESC/ESC3.jpg">
             </div>
 
             <div class="image4">
-                <img src="assets/images/studentlife/image4.png">
+                <img src="assets/images/studentlife/ESC/ESC4.jpg">
             </div>
 
             <div class="image5">
-                <img src="assets/images/studentlife/image5.png">
+                <img src="assets/images/studentlife/ESC/ESC5.jpg">
             </div>
 
             <div class="image6">
-                <img src="assets/images/studentlife/image6.png">
+                <img src="assets/images/studentlife/ESC/ESC6.jpg">
             </div>
 
         </div>
@@ -510,27 +510,27 @@
             </div>
 
             <div class="image1">
-                <img src="assets/images/studentlife/image1.png">
+                <img src="assets/images/studentlife/MBS/MBS1.jpg">
             </div>
 
             <div class="image2">
-                <img src="assets/images/studentlife/image2.png">
+                <img src="assets/images/studentlife/MBS/MBS2.jpg">
             </div>
 
             <div class="image3">
-                <img src="assets/images/studentlife/image3.png">
+                <img src="assets/images/studentlife/MBS/MBS3.jpg">
             </div>
 
             <div class="image4">
-                <img src="assets/images/studentlife/image4.png">
+                <img src="assets/images/studentlife/MBS/MBS4.jpg">
             </div>
 
             <div class="image5">
-                <img src="assets/images/studentlife/image5.png">
+                <img src="assets/images/studentlife/MBS/MBS5.jpg">
             </div>
 
             <div class="image6">
-                <img src="assets/images/studentlife/image6.png">
+                <img src="assets/images/studentlife/MBS/MBS6.jpg">
             </div>
 
         </div>
@@ -651,27 +651,27 @@
             </div>
 
             <div class="image1">
-                <img src="assets/images/studentlife/image1.png">
+                <img src="assets/images/studentlife/PAA/PAA1.jpeg">
             </div>
 
             <div class="image2">
-                <img src="assets/images/studentlife/image2.png">
+                <img src="assets/images/studentlife/PAA/PAA2.jpeg">
             </div>
 
             <div class="image3">
-                <img src="assets/images/studentlife/image3.png">
+                <img src="assets/images/studentlife/PAA/PAA3.jpg">
             </div>
 
             <div class="image4">
-                <img src="assets/images/studentlife/image4.png">
+                <img src="assets/images/studentlife/PAA/PAA4.jpg">
             </div>
 
             <div class="image5">
-                <img src="assets/images/studentlife/image5.png">
+                <img src="assets/images/studentlife/PAA/PAA5.jpg">
             </div>
 
             <div class="image6">
-                <img src="assets/images/studentlife/image6.png">
+                <img src="assets/images/studentlife/PAA/PAA6.jpg">
             </div>
 
         </div>
@@ -801,27 +801,27 @@
             </div>
 
             <div class="image1">
-                <img src="assets/images/studentlife/image1.png">
+                <img src="assets/images/studentlife/PSB/PSB1.jpeg">
             </div>
 
             <div class="image2">
-                <img src="assets/images/studentlife/image2.png">
+                <img src="assets/images/studentlife/PSB/PSB2.jpg">
             </div>
 
             <div class="image3">
-                <img src="assets/images/studentlife/image3.png">
+                <img src="assets/images/studentlife/PSB/PSB3.jpg">
             </div>
 
             <div class="image4">
-                <img src="assets/images/studentlife/image4.png">
+                <img src="assets/images/studentlife/PSB/PSB4.jpg">
             </div>
 
             <div class="image5">
-                <img src="assets/images/studentlife/image5.png">
+                <img src="assets/images/studentlife/PSB/PSB5.jpg">
             </div>
 
             <div class="image6">
-                <img src="assets/images/studentlife/image6.png">
+                <img src="assets/images/studentlife/PSB/PSB6.jpg">
             </div>
 
         </div>
