--- a/index.html
+++ b/index.html
@@ -196,12 +196,13 @@
     </div>
     <div class="review" style="justify-self: end;">
       <img src="assets/images/landing/review1.png">
-      <h3>Andrea Elwyn, 24</h3>
-      <p>“FROM Canada: I found ESS agency more
-        experience, professional & dedicated. Their
-        expertise are useful for me not only for granting
-        visa but also for choosing right institution based on
-        my previous qualifications. ”</p>
+      <h3>Kristoff Jameson, 22</h3>
+      <p>“FROM California: My experience with ESS was 
+        great. They helped me with all the documentation
+        and also everything what I needed for transit 
+        to study in France.”
+
+      </p>
     </div>
     <div class="review">
       <img src="assets/images/landing/review2.png">
@@ -214,12 +215,11 @@
     </div>
     <div class="review" style="justify-self: start;">
       <img src="assets/images/landing/review3.png">
-      <h3>Andrea Elwyn, 24</h3>
-      <p>“FROM Canada: I found ESS agency more
-        experience, professional & dedicated. Their
-        expertise are useful for me not only for granting
-        visa but also for choosing right institution based on
-        my previous qualifications. ”</p>
+      <h3>James Robertson, 23</h3>
+      <p>“FROM Washington: Communcation with agency
+        was very kind and helpful in every way.
+        Theyr proffesional skills helped me fulfil
+        my dreams and helped building my better future. ”</p>
     </div>
 
     <div></div>
