--- a/index.html
+++ b/index.html
@@ -18,19 +18,47 @@
 <body>
 
 
-  <!--   navigation -->
-  <div class="topnav" id="myTopnav">
-    <img src="assets/images/Logo.png" width="50px" id="logo">
+     <!-- .......................... Nav-bar .......................... -->
 
 
-    <a href="Contact-us.html"><button class="buttonStyle1">Contact Us</button></a>
-    <a href="service.html">Our Services</a>
-    <a href="universities.html">Universities</a>
+     <nav class="navbar">
+      <div class="logo"> <a href="index.html"><img src="assets/images/Logo.png" id="logo" alt="logo"> </a></div>
 
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
+      <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+          <ul>
+              <li> <a href="universities.html">Universities</a></li>
+              <li> <a href="service.html">Our Services</a></li>
+              <li><a href="Contact-us.html">
+                      <div class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</div>
+                  </a></li>
+
+          </ul>
+      </div>
+  </nav>
+
+
+  <script>
+      const toggleButton = document.getElementsByClassName('toggle-button')[0]
+      const navbarLinks = document.getElementsByClassName('navbar-links')[0]
+
+      toggleButton.addEventListener('click', () => {
+          navbarLinks.classList.toggle('active')
+      })
+
+
+      $(document).ready(function () {
+          $('#nav-icon1,#nav-icon2,#nav-icon3,#nav-icon4').click(function () {
+              $(this).toggleClass('open');
+          });
+      });
+  </script>
+
+
 
   <div class="landing-img-grid">
     <div class="scroll">
