--- a/service.html
+++ b/service.html
@@ -16,42 +16,46 @@
 <body>
 
 
-    <nav class="navbar">
-        <div class="logo"><a href="index.html"><img src="assets/images/Logo.png" id="logo"></div>
-
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
-        <div class="navbar-links">
-            <ul>
-                <li><a href="universities.html">Universities</a></li>
-                <li><a href="service.html">Our Services</a></li>
-                <li><a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact
-                            Us</button></a></li>
+  <!-- .......................... Nav-bar .......................... -->
 
 
-            </ul>
-        </div>
-    </nav>
+  <nav class="navbar">
+    <div class="logo"> <a href="index.html"><img src="assets/images/Logo.png" id="logo" alt="logo"> </a></div>
+
+    <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+        <ul>
+            <li> <a href="universities.html">Universities</a></li>
+            <li> <a href="service.html">Our Services</a></li>
+            <li><a href="Contact-us.html">
+                    <div class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</div>
+                </a></li>
+
+        </ul>
+    </div>
+</nav>
 
 
-    <script>
-        const toggleButton = document.getElementsByClassName('toggle-button')[0]
-        const navbarLinks = document.getElementsByClassName('navbar-links')[0]
+<script>
+    const toggleButton = document.getElementsByClassName('toggle-button')[0]
+    const navbarLinks = document.getElementsByClassName('navbar-links')[0]
 
-        toggleButton.addEventListener('click', () => {
-            navbarLinks.classList.toggle('active')
-        })
+    toggleButton.addEventListener('click', () => {
+        navbarLinks.classList.toggle('active')
+    })
 
 
-        $(document).ready(function () {
-            $('#nav-icon1,#nav-icon2,#nav-icon3,#nav-icon4').click(function () {
-                $(this).toggleClass('open');
-            });
+    $(document).ready(function () {
+        $('#nav-icon1,#nav-icon2,#nav-icon3,#nav-icon4').click(function () {
+            $(this).toggleClass('open');
         });
-    </script>
+    });
+</script>
+
 
 
 
