--- a/index.html
+++ b/index.html
@@ -341,47 +341,45 @@
 
   <footer>
     <div class="footer-content">
-      <div class="footer-left">
-        <h4><b>Our Services</b></h4>
-        <p> Admission Counselling
-          <br>Health Cover
-          <br>Student Visa Service
-          <br> Accomodation
-        </p>
-        <br>
-        <div class="landing-contact-button">
-          <a href="#"><button class="buttonStyle1">Contact Us</button></a>
+        <div class="footer-left">
+            <h4><b>Our Services</b></h4>
+            <p><a href="service.html">Guidance and service</a>
+                <br><a href="service.html">Service Price</a>
+                <br><a href="service.html">Filling out the Application</a>
+                <br><a href="service.html">Student Visa Service</a>
+                <br> <a href="service.html">Accomodation</a>
+            </p>
+            <br>
+            <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
         </div>
-      </div>
 
-      <div class="footer-center">
-        <h4><b> Contact Us </b></h4>
-        <p><b>Telephone:</b>
-          <br>1 800 AFS-INFO
-          <br>
-          <br><b>Address:</b>
-          <br>120 Wall Street
-          <br>Floor 4
-          <br> New York, NY 10005
-        </p>
-      </div>
+        <div class="footer-center">
+            <h4><b> Contact Us </b></h4>
+            <p><b>Telephone:</b>
+                <br>+380972841850
+                <br>
+                <br><b>Address:</b>
+                <br>120 Wall Street
+                <br>Floor 4
+                <br> New York, NY 10005
+            </p>
+        </div>
 
-      <div class="footer-right">
-        <h4><b>Study Abroad</b> </h4>
-        <p>Why study abroad?
-          <br>Benefits of Overseas Study
-          <br>Steps to study abroad
-          <br>FAQs
-          <br>Ready to apply
-          <br>Student stories
-        </p>
-      </div>
+        <div class="footer-right">
+            <h4><b>Study Abroad</b> </h4>
+            <p>Why study abroad
+                <br><a href="index.html">Steps to study abroad</a>
+                <br><a href="index.html">FAQs</a>
+                <br>Ready to apply
+                <br><a href="index.html">Reviews</a>
+            </p>
+        </div>
     </div>
     <div class="footer-bottom">
-      <p> Copyright © 2021 European Study Solution. </p>
+        <p> Copyright © 2021 European Study Solution </p>
     </div>
     </div>
-  </footer>
+</footer>
 
 </body>
 
