--- a/Contact-us.html
+++ b/Contact-us.html
@@ -191,7 +191,8 @@
 
     </div>
 
-    <footer>
+      <!----------------------------------Footer -------------------------->
+      <footer>
         <div class="footer-content">
             <div class="footer-left">
                 <h4><b>Our Services</b></h4>
@@ -202,9 +203,9 @@
                     <br> <a href="service.html">Accomodation</a>
                 </p>
                 <br>
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+                <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
             </div>
-
+    
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
                 <p><b>Telephone:</b>
@@ -216,14 +217,14 @@
                     <br> New York, NY 10005
                 </p>
             </div>
-
+    
             <div class="footer-right">
                 <h4><b>Study Abroad</b> </h4>
                 <p>Why study abroad
-                    <br><a href="index.html">Steps to study abroad</a>
-                    <br><a href="index.html">FAQs</a>
+                    <br><a href="index.html#steps">Steps to study abroad</a>
+                    <br><a  href="index.html#FAQ">FAQs</a>
                     <br>Ready to apply
-                    <br><a href="index.html">Reviews</a>
+                    <br><a  href="index.html#reviews">Reviews</a>
                 </p>
             </div>
         </div>
@@ -232,6 +233,8 @@
         </div>
         </div>
     </footer>
+
+
 
 </body>
 
