--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
   </section>
 
-  <section class="process">
+  <section class="process" id="steps">
     <div class="headline2">
       <h2>The Process We Will Go Through:</h2>
     </div>
@@ -218,7 +218,7 @@
     <img src="assets/images/landing/prices.png" alt="prices">
   </section>
 
-  <section class="reviews">
+  <section class="reviews" id="reviews">
     <div class="headline_reviews">
       <h2>Reviews from our customers</h2>
     </div>
@@ -253,7 +253,7 @@
     <div></div>
   </section>
 
-  <section class="FAQ">
+  <section class="FAQ" id="FAQ">
     <div class="headline2">
       <h2>Frequently Asked Questions</h2>
     </div>
@@ -350,7 +350,7 @@
                 <br> <a href="service.html">Accomodation</a>
             </p>
             <br>
-            <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+            <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
         </div>
 
         <div class="footer-center">
@@ -368,10 +368,10 @@
         <div class="footer-right">
             <h4><b>Study Abroad</b> </h4>
             <p>Why study abroad
-                <br><a href="index.html">Steps to study abroad</a>
-                <br><a href="index.html">FAQs</a>
+                <br><a href="#steps">Steps to study abroad</a>
+                <br><a  href="#FAQ">FAQs</a>
                 <br>Ready to apply
-                <br><a href="index.html">Reviews</a>
+                <br><a  href="#reviews">Reviews</a>
             </p>
         </div>
     </div>
