--- a/service.html
+++ b/service.html
@@ -165,7 +165,7 @@
 
         </div>
 
-        <div id="Guidance " class="tabcontent">
+        <div id="Guidance" class="tabcontent">
             <h3>Guidance and Counselling</h3>
             <p>Making the decision to study abroad takes guts. It shows your somebody who isn’t <br> afraid to take
                 on new frontiers.We certainly understand the excitement of studying <br>overseas but we also know it can
@@ -396,9 +396,9 @@
                     <br> <a href="service.html">Accomodation</a>
                 </p>
                 <br>
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+                <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
             </div>
-
+    
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
                 <p><b>Telephone:</b>
@@ -410,14 +410,14 @@
                     <br> New York, NY 10005
                 </p>
             </div>
-
+    
             <div class="footer-right">
                 <h4><b>Study Abroad</b> </h4>
                 <p>Why study abroad
-                    <br><a href="index.html">Steps to study abroad</a>
-                    <br><a href="index.html">FAQs</a>
+                    <br><a href="index.html#steps">Steps to study abroad</a>
+                    <br><a  href="index.html#FAQ">FAQs</a>
                     <br>Ready to apply
-                    <br><a href="index.html">Reviews</a>
+                    <br><a  href="index.html#reviews">Reviews</a>
                 </p>
             </div>
         </div>
