--- a/index.html
+++ b/index.html
@@ -190,11 +190,18 @@
       <h2>American Versus European Education Fee</h2>
     </div>
     <img src="assets/images/landing/scales.png">
-    <p>Sometime the first step can be the hardest but at
-      ESS - your trusted education agent - we make it
-      easy. Chat to our education consultants today and
-      be one of the thousands of students a year we help
-      with studying abroad.</p>
+    <p>According to College Board, published tuition
+      fees for 2018/19 at state colleges are an average
+      of US$10,230 for state residents, and $26,290 for
+      everyone else. This compares to an average of $35,830
+      at private non-profit colleges, but it’s also possible to
+      study in the US at a much lower outlay. <br> <br>
+      Tuition fees at public universities in France
+      have variable prices, depending on your chosen
+      study level. For Bachelor's programmes, the average
+      tuition fees are around 170 EUR per year. So when we 
+      add all prices for accommodation and living by itself
+      we can get to 10 000$ per one year.</p>
   </section>
 
   <section class="uni_grid">
