--- a/universities.html
+++ b/universities.html
@@ -88,7 +88,7 @@
 
         </div>
     </div>
-
+    
         <!-- ----------------------- GEM contents -------------------------- -->
 
         <div id="GEM" class="unicontainer">
@@ -203,7 +203,9 @@
 
             <div class="mapcontainer">
 
-                <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11247.381125353102!2d5.7130923!3d45.1902281!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xff73050b120f69f5!2sGrenoble%20Ecole%20de%20Management!5e0!3m2!1sen!2sdk!4v1623336705553!5m2!1sen!2sdk" width="1100" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11247.381125353102!2d5.7130923!3d45.1902281!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xff73050b120f69f5!2sGrenoble%20Ecole%20de%20Management!5e0!3m2!1sen!2sdk!4v1623336705553!5m2!1sen!2sdk" width="1100" height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
 
                 <div class="maptext">
                     <h2>Address:</h2>
