--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
         our education consultants today and be one of the thousands of students a year we help with studying abroad.</p>
     </div>
     <div class="landing-contact-button">
-      <a href="#"><button class="buttonStyle1">Contact Us</button></a>
+    <a href="Contact-us.html">
+      <button class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</button>
+    </a>
     </div>
-
     <div class="arrow bounce"></div>
-    <!--  <div class="landing-arrow bounce">
-      <i class="fas fa-chevron-down"></i> -->
   </div>
   </div>
 
@@ -209,13 +208,15 @@
       <div class="headline_uni">
         <h2>Partner Universities</h2>
       </div>
-      <img src="assets/images/uni_logos/GEM.png">
-      <img src="assets/images/uni_logos/ESC.png">
-      <img src="assets/images/uni_logos/MBS.png">
-      <img src="assets/images/uni_logos/PAA.png">
-      <img src="assets/images/uni_logos/PSB.png">
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/GEM.png"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/ESC.png"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/MBS.png"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PAA.png"></a>
+      <a class="uni_logo" href="universities.html"><img src="assets/images/uni_logos/PSB.png"></a>
 
-      <a href="#"><button class="buttonStyle1">Contact Us</button></a>
+      <a class="uni_button" href="Contact-us.html">
+        <button class="buttonStyle2"><i class="fas fa-phone-alt"></i>Contact Us</button>
+      </a>
     </section>
   </section>
 
